--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movie-tracker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://jellybeans1312.github.io/!netflix",
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --verbose",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,7 +39,8 @@
   "devDependencies": {
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "enzyme-to-json": "^3.3.5"
+    "enzyme-to-json": "^3.3.5",
+    "gh-pages": "^2.1.1"
   },
   "jest": {
     "snapshotSerializers": [
