changing homepage to !netflix

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "movie-tracker",
   "version": "0.1.0",
+  "homepage": "http://jellybeans1312.github.io/!netflix",
   "private": true,
-  "homepage": "http://jellybeans1312.github.io/Movie-Tracker",
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
